# swolfpy-inputdata

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  bitbucket-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: python-app.yml
Notebooks/: Material Properties-Interactive.ipynb  Material Properties.ipynb
swolfpy_inputdata/: AD_Input.py  AnF_Input.py  COM_Col_Input.py  CommonData.py  Comp_Input.py  GC_Input.py  HC_Input.py  InputData.py  LF_Input.py  MC.py  MF_Col_Input.py  RDF_Input.py  Reproc_Input.py  SF_Col_Input.py  SS_MRF_Input.py  TS_Input.py  Technosphere_Input.py  WTE_Input.py  __init__.py
swolfpy_inputdata/Data/: AD_Input.csv  AD_Input_MaterialDependent.csv  AnF_Input.csv  AnF_Input_MaterialDependent.csv  COM_Col_Input.csv  COM_Col_Input_MaterialDependent.csv  CommonData.csv  Comp_Input.csv  Comp_Input_MaterialDependent.csv  GC_Input.csv  GC_Input_MaterialDependent.csv  HC_Input.csv  HC_Input_MaterialDependent.csv  LF_GasColPlan.csv  LF_Input.csv  LF_Input_MaterialDependent.csv  LF_Leachate_Allocation.csv  LF_Leachate_Coeff.csv  MF_Col_Input.csv  MF_Col_Input_MaterialDependent.csv  Material properties.csv  RDF_Input.csv  RDF_Input_MaterialDependent.csv  References.csv  Reprocessing_Input.csv  SF_Col_Input.csv  SF_Col_Input_MaterialDependent.csv  SF_Col_Input_process.csv  SF_collection_Input-Material_dependent.csv  SF_collection_Input.csv  SS_MRF_Input.csv  SS_MRF_Input_MaterialDependent.csv  TS_Input.csv  Technosphere_LCI.csv  Technosphere_References.csv  Test_Input.csv  WTE_Input.csv  WTE_Input_MaterialDependent.csv  __init__.py
swolfpy_inputdata/Ecospold2/: __init__.py
swolfpy_inputdata/data/: AD_Input.csv  CommonData.csv  Comp_Input.csv  (+8 more)
swolfpy_inputdata/data-1/: AD_Input_MaterialDependent.csv  RDF_Input.csv  Reprocessing_Input.csv  Technosphere_LCI.csv
tests/: Test_Input.csv  __init__.py  test_inputdata.py  test_inputs.py  test_swolfpy.py
(+15 files in other folders)
