[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swolfpy_inputdata"
dynamic = ["version", "readme", "dependencies"]
description = "Input data for swolfpy's life-cycle process models (swolfpy_inputdata)."
license = {text = "GNU GENERAL PUBLIC LICENSE V2"}
requires-python = ">=3.7"
authors = [
  {name = "Mojtaba Sardarmehni", email = "msardar2@alumni.ncsu.edu"},
]
maintainers = [
  {name = "Mojtaba Sardarmehni", email = "msardar2@alumni.ncsu.edu"},
]
keywords = [
    "LCA",
    "solid_waste",
    "waste_management",
    "swolfpy",
    "brightway2",
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Visualization',
    'Natural Language :: English',
]

[project.urls]
Homepage = "https://swolfpy-project.github.io/"
Documentation = "https://swolfpy.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/SwolfPy-Project/swolfpy-inputdata"

[tool.setuptools.dynamic]
version = {attr = "swolfpy_inputdata.__version__"}
readme = {file = ["README.rst", "HISTORY.rst"]}
dependencies = {file = "requirements.txt"}

[tool.setuptools]
packages = ["swolfpy_inputdata"]
include-package-data = true

[tool.setuptools.package-data]
package_input_data = [
    "Data/*.csv",
    "Data/LCIA_Methods/*.csv",
    ]

[tool.black]
line-length = 100
preview = false

[tool.isort]
profile = "black"
line_length = 100
